--- a/naturet/public/stylesheets/style.css
+++ b/naturet/public/stylesheets/style.css
@@ -19,6 +19,11 @@
   font-weight: normal;
 }
 
+.nt-fb{
+  font-family: 'Circular Std Bold';
+  font-weight: normal;
+}
+
 .nt-w {
   color: white;
 }
@@ -339,7 +344,6 @@ p.category-name{
   text-overflow: ellipsis;
   max-width: 200px;
   max-height: 45px;
-  white-space: nowrap;
 }
 
 .category-name-text {
@@ -946,6 +950,191 @@ html {
 
 /*----end of session profile---*/
 
+/*---edit profile---*/
+
+.div-help-create{
+  padding: 16px;
+  background-color:  var(--category-bg-color);
+  margin-top: 17px;
+  border-radius: 5px;
+  margin-bottom: 45px;
+}
+
+.div-help-create p{
+  font-size: 15px;
+  margin: 0 auto;
+  color: white;
+}
+
+.errors-div-form{
+  padding: 16px;
+  background-color: rgba(255,0,0,0.7);
+  margin-bottom: 15px;
+  color: white;
+  font-weight: bold;
+  border-radius: 3px;
+}
+
+.errors-div-form p{
+  padding: 0px;
+    margin: 0 auto;
+}
+
+.nt-ipc{
+  border: 3px solid  #00c98d63;
+}
+
+#phone-input{
+  margin-top: 9px;
+}
+
+#input-image-profile{
+  margin-top: 11px;
+}
+
+.input-file-profile{
+  padding:7px;
+  height: 50px;
+}
+.span-edit-subtitle{
+  color: grey;
+}
+
+#birth-input{
+  border-radius: 5px;
+  padding: 7px;
+  width: 100%;
+}
+
+
+.country-input{
+  border-radius: 5px;
+  padding: 7px;
+  width: 100%;
+}
+
+.autocomplete{
+  margin-top:10px;
+}
+
+
+#description-area{
+  margin-top:10px;
+  border-radius: 25pz;
+  border-radius: 5px;
+  padding-left: 10px;
+  padding-top: 7px;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+/*---end of edit profile ---*/
+
+/*---- edit creator profile ---*/
+
+.checkmark-politic {
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  margin-left: -25px;
+  background-color: #eee;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  z-index: -1;
+}
+.checkmark-politic:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.politics-checkbox input {
+  opacity: 0;
+  cursor: pointer;
+  width:25px;
+  height:25px;
+ 
+}
+.expertise-checkbox{
+  padding-left: 5px;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.politics-checkbox .checkmark-politic:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/* Show the checkmark when checked */
+.politics-checkbox input:checked ~ .checkmark-politic:after {
+  display: block;
+}
+
+.politics-checkbox:hover input ~ .checkmark-politic {
+  background-color: #ccc;
+}
+.politics-checkbox input:checked ~ .checkmark-politic {
+  background-color: var(--category-bg-color);
+} 
+
+
+.checkmark {
+  position: absolute;
+  height: 25px;
+  width: 25px;
+  background-color: #eee;
+  border-radius: 4px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+}
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+.expertise-checkbox input {
+  opacity: 0;
+  cursor: pointer;
+  width:25px;
+  height:25px;
+  z-index:10;
+}
+.expertise-checkbox{
+  display: flex;
+    align-items: center;
+    padding-bottom: 5px;
+}
+
+.expertise-checkbox .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+/* Show the checkmark when checked */
+.expertise-checkbox input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.expertise-checkbox:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+.expertise-checkbox input:checked ~ .checkmark {
+  background-color: var(--category-bg-color);
+} 
+
+
+/*---- end of edit creator profile ---*/
+
 #fav-btn i {
   pointer-events: none;
 }
@@ -1065,15 +1254,18 @@ body {
 }
 
 .autocomplete-items {
-  max-height: 97px;
+  max-height: 107px;
   overflow: hidden;
   position: absolute;
   background-color: white;
   width: 100%;
+  z-index: 5;
+  padding: 7px;
 }
 
 .countries-container {
   cursor: pointer;
+  padding: 4px;
 }
 
 #map {
@@ -1136,6 +1328,10 @@ input[type=file] {
   position: absolute;
 }
 
+.margin-checkbox{
+  font-size: 17px;
+}
+
 .category-card span {
   font-size: 40px;
   margin-bottom: 10px;
@@ -1180,10 +1376,11 @@ input[type=file] {
 
 @media (max-width:1200px) {
   .profile-container > div{
-    margin-top:0px !important;
+    margin-top: -30px !important;
   }
   #getFixed{
     position: initial !important;
+    max-width: 1000px;
   }
 
   .profile-sidenav {
@@ -1203,6 +1400,27 @@ input[type=file] {
 }
 
 @media (max-width: 768px) {
+  .expertise-checkbox{
+    align-items: unset !important;
+
+  }
+
+ .margin-checkbox{
+   margin-left: 15px !important;
+   font-size: 17px;
+ }
+  #responsive-menu-tag{
+    margin-bottom: -25px !important;
+    padding-top: 10px;
+  }
+  .nav-intro-profile{
+    margin-bottom: 25px !important;
+  }
+
+  .profile-sidenav-inside {
+    border-radius: 5px;
+    padding: 8px;
+}
   .mobile-none-nav {
     display: none !important;
   }
@@ -1241,11 +1459,26 @@ input[type=file] {
 
 /* Extra Media Query Below for Retina Iphones and Smaller */
 @media only screen and (max-width : 480px) {
+  .politics-checkbox {
+    padding-bottom: 20px;
+}
+  .politic-name{
+    padding-left: 0px;
+  }
+  .politics-checkbox input {
+    opacity: 0;
+    cursor: pointer;
+    width: 29px;
+    height: 25px;
+    z-index: 10;
+}
   .profile-container{
-
-
 margin-top: 90px;
   }
+  #margin-mobile{
+    margin-top: 90px;
+  }
+
   #profile-name{
     font-size:1.7rem;
   }
