--- a/naturet/views/partials/footer.hbs
+++ b/naturet/views/partials/footer.hbs
@@ -47,8 +47,8 @@
           <h3 class="footer-title">Subscribe Newsletter</h3>
           <form>
             <div class="newsletter-form mx-auto">
-              <input class="form-control" placeholder="Enter your email address" type="text">
-              <button class="btn btn-default btn-sm news-letter-button" type="submit">GO!</button>
+              <input id="subscribe" class="form-control" placeholder="Enter your email address" type="text">
+              <button class="btn btn-default btn-sm news-letter-button" type="submit" id="sendSub">GO!</button>
             </div>
           </form>
         </div>
@@ -65,3 +65,5 @@
     </div>
   </div>
 </div>
+
+<script src="/js/subscribe.js" type="text/javascript"></script>
