--- a/naturet/views/experiences/form.hbs
+++ b/naturet/views/experiences/form.hbs
@@ -1,114 +1,151 @@
-<article id="create-user">
-  <div class="container">
-    <div class="row pb-5">
+{{> searchmobile}}
 
-      <div class="col-xl-3 col-md-3 col-12 ">
-        <div style="">
-          <div class=" profile-navigation d-flex flex-column  ">
+<article id="create-user">
+  <div class="container-slider mx-auto mt-6 profile-container">
+    <div class="row pb-5 pt-5">
+      <div class="col-xl-4 col-md-12 col-12 row mx-auto nav-intro-profile" id="responsive-menu-tag">
+        <div class="profile-sidenav d-flex flex-column mx-auto nav-intro-profile mb-5 " id="getFixed">
+          <div class="profile-sidenav-inside d-flex flex-column mt-4">
+            <h4 class="nt-fb"><span class="far fa-map nt-c mr-3"></span>Creating experiences</h4>
             <a href="#categories">Categories</a>
             <a href="#description">Some description</a>
-            <a href="#lugar">Lugar</a>
-            <a class="btn btn danger" href="/profile">View Profile</a>
+            <a href="#role">User role</a>
+            <a href="#experiences">Experiences</a>
+            <a class="btn btn-danger mt-3" id="edit-profile-button" href="/profile/edit">Edit Profile</a>
+            {{#if session.creator}}
+            <a class="btn btn-default" href="/creator/edit">Edit Creator Profile</a>
+            {{/if}}
           </div>
         </div>
       </div>
 
-      <div class="col-xl-9 col-md-9 col-12">
-
-        <h1>Your seller profile</h1>
-        <img src="{{session.photo}}">
-        <h3>{{session.name}}</h3>
-        <hr>
+      <div class="col-xl-8 col-md-12 col-12">
 
 
-        <form action="/experiences/create" method="post" onsubmit="addPathToForm(this)" enctype="multipart/form-data">
-          <h1>New experience</h1>
-          <hr>
-          <h1 id="categories">categories</h1>
-          <h5 class="mb-3">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</h5>
-          <p class="mb-5">Lit amet, consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet,
-            consectetur adipiscing elit, sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing
-            elit,
-            sed do eiusmod tempor inLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor in</p>
+        <div class="row pb-5 mb-5">
+          <div class="back-image-experiences d-flex align-items-center justify-content-center d-column">
+            <h1 class="nt-fb nt-w">New experience</h1>
+            <hr class="hr-new-experience">
+            <p class="p-intro-new-experience">Making your own way, step by step...</p>
+          </div>
+        </div>
 
-          <div class="row">
+        <section class="pb-5 pt-5">
+          <div class="text-center mt-5">
+          </div>
+        </section>
+
+
+
+        {{!-- <div class="form-group">
+          <label for="name">Nombre de la actividad</label>
+          <input type="text" class="form-control" id="name" name="name" value="{{name}}">
+          {{#if errors.name}}
+          <p>{{errors.name}}</p>
+          {{/if}}
+        </div>
+
+
+        --}}
+
+
+
+
+        <form action="/experiences/create" class="mt-4" method="post" onsubmit="addPathToForm(this)" enctype="multipart/form-data">
+
+          <section class=" pt-4 pb-5 border-bottom" id="description">
+            <h2><span class="fa fa-signature nt-c mr-3"></span>Experience's name </h2>
+            <div class="mb-2">
+              <h5 class="mb-3 pt-2 nt-f profile-subtitle">Choose and exciting or personal description to your
+                experience!</h5>
+              <p class="mb-2 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis
+                posuere,
+                mattis urna sodales ornare semper eros
+                dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
+                fringilla porttitor tellus.</p>
+              <input type="text" name="name" id="name" class="country-input nt-ipc mt-3" placeholder="Experience Name"
+                value='{{name}}'>
+              {{#if errors.name}}
+              <div class="errors-div-form mt-4">
+                <p><span class="fa fa-exclamation-circle nt-w mr-3"></span>{{ errors.name }}</p>
+              </div>
+              {{/if}}
+          </section>
+
+          <section class="mt-5 pb-4 border-bottom">
+            <h2><span class="far fa-heart nt-c mr-3"></span>Experience categories </h2>
+            <h5 class="mb-3 pt-2 nt-f profile-subtitle">Choose your categories
+              wisely to match with your potential costumers.</h5>
+            <p class="mb-4 ml-0 profile-paragraph">Lorem ipsum dolor sit amet consectetur adipiscing elit dis posuere,
+              mattis urna sodales ornare semper eros
+              dictum ultricies vestibulum, tempus at erat venenatis id odio non facilisi. Rhoncus sem congue volutpat
+              fringilla porttitor tellus netus per facilisis habitant risus tristique.</p>
             {{#if errors.categories}}
-            <div class="w-100">
-              <h2>{{errors.categories}}</h2>
+            <div class="errors-div-form mb-5">
+              <p><span class="fa fa-exclamation-circle nt-w mr-3"></span>{{ errors.categories }}</p>
             </div>
             {{/if}}
 
-            {{!-- {{#each allCategories as |category| }}
-
-            <div class="col-xl-2 col-md-3 col-6">
-              <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}" />
-              <div class="category-card">
-                <span class='icon-{{category.fontnum}}'></span>
-                <!-- descomentar esto par añadir estilo -->
-                <p class="category-name">{{ category.name }} </p>
+            <div class="row">
+              {{#each allCategories as |category| }}
+              <div class="col-xl-2 col-md-3 col-6">
+                <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}"
+                  {{#containCategoryCreate  category ../categories }} {{/containCategoryCreate}} />
+                <div class="category-card">
+                  <span class='icon-{{category.fontnum}}'></span>
+                  <!-- descomentar esto par añadir estilo -->
+                  <p class="category-name">{{ category.name }} </p>
+                </div>
               </div>
+              {{/each}}
             </div>
+          </section>
 
-            {{/each}} --}}
-
-            {{#each allCategories as |category| }}
-            <div class="col-xl-2 col-md-3 col-6">
-              <input type='checkbox' name="categories" class="input-category" id="{{ category.id }}" value="{{ category.id }}"
-                {{#containCategoryCreate  category ../categories }} {{/containCategoryCreate}} />
-              <div class="category-card">
-                <span class='icon-{{category.fontnum}}'></span>
-                <!-- descomentar esto par añadir estilo -->
-                <p class="category-name">{{ category.name }} </p>
+          <section class="mt-5 pb-5 border-bottom">
+            <div class="form-group">
+              <h2><span class="fa fa-euro-sign nt-c mr-3"></span>Experience price </h2>
+              <h5 class="mb-3 pt-2 nt-f profile-subtitle">Choose your best price in a normal range</h5>
+              <p class="mb-2 ml-0 profile-paragraph">The values are writting in numbers, <strong class="nt-c">from 0 to
+                  your choice</strong> and the currency will be displayed in <strong class="nt-c">Euros.</strong></p>
+              <input type="Number" class="country-input nt-ipc mt-3" min="0" id="price" name="price" value="{{price}}">
+              {{#if errors.price}}
+              <div class="errors-div-form mt-4">
+                <p><span class="fa fa-exclamation-circle nt-w mr-3"></span>{{ errors.price }}</p>
               </div>
+              {{/if}}
             </div>
-            {{/each}}
-
-          </div>
+          </section>
 
 
-          <hr>
+
           <div class="form-group">
-            <h1 id="description">Some description</h1>
+
             <div class="mb-2">
-              <div class="form-group">
-                <label for="name">Nombre de la actividad</label>
-                <input type="text" class="form-control" id="name" name="name" value="{{name}}">
-                {{#if errors.name}}
-                <p>{{errors.name}}</p>
-                {{/if}}
-              </div>
 
-              <div class="form-group">
-
-                 <label for="price">Price:</label>
-                <input type="Number" class="form-control" min="0" id="price" name="price" value="{{price}}">
-                {{#if errors.price}}
-                <p>{{errors.price}}</p>
-                {{/if}}
-              </div>
-
-              
-
-
-              <div class="form-group">
-                <label for="languages">Idiomas</label>
-                <br />
-                <input id="Spanish" type="checkbox" name="languages" value="Spanish" />
-                <label for="Spanish">Spanish</label>
-                <br />
-                <input id="English" type="checkbox" name="languages" value="English" />
-                <label for="English">English</label>
-                <br />
-                <input id="French" type="checkbox" name="languages" value="French" />
-                <label for="French">French</label>
-                <br />
-                <input id="German" type="checkbox" name="languages" value="German" />
-                <label for="German">German</label>
-                <br />
-                <input id="Chinese" type="checkbox" name="languages" value="Chinese" />
-                <label for="Chinese">Chinese</label>
-              </div>
-
+              <section class="mt-5 pb-5 border-bottom">
+                 <h2><span class="fa fa-book nt-c mr-3"></span>Some description</h2>
+              <h5 class="mb-3 pt-2 nt-f profile-subtitle">Choose your best price in a normal range</h5>
+              <p class="mb-2 ml-0 profile-paragraph">The values are writting in numbers, <strong class="nt-c">from 0 to
+                  your choice</strong> and the currency will be displayed in <strong class="nt-c">Euros.</strong></p>
+                <div class="form-group">
+                  <label for="languages">Idiomas</label>
+                  <br />
+                  <input id="Spanish" type="checkbox" name="languages" value="Spanish" />
+                  <label for="Spanish">Spanish</label>
+                  <br />
+                  <input id="English" type="checkbox" name="languages" value="English" />
+                  <label for="English">English</label>
+                  <br />
+                  <input id="French" type="checkbox" name="languages" value="French" />
+                  <label for="French">French</label>
+                  <br />
+                  <input id="German" type="checkbox" name="languages" value="German" />
+                  <label for="German">German</label>
+                  <br />
+                  <input id="Chinese" type="checkbox" name="languages" value="Chinese" />
+                  <label for="Chinese">Chinese</label>
+                </div>
+              </section>
               <div class="form-group">
                 <label for="duration">Duración</label>
                 <input type="Number" class="form-control" min="0" id="duration" name="duration" value="{{experience.duration}}">
@@ -176,6 +213,23 @@
           <button type="submit" class="btn btn-primary">Submit</button>
 </article>
 </form>
+<script>
+  jQuery(function ($) {
+    function fixDiv() {
+      var $cache = $('#getFixed');
+      if ($(window).scrollTop() > 100 && $(window).width() >= 1080)
+        $cache.css({
+          'top': '40px'
+        });
+      else
+        $cache.css({
+          'top': 'auto'
+        });
+    }
+    $(window).scroll(fixDiv);
+    fixDiv();
+  });
+</script>
 
 <script>
   var decodedJson = decodeURIComponent("{{{pointsJSON}}}");
