chore: configure maps api

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -61,7 +61,7 @@
   <script src="/js/index.js" type="text/javascript"></script>
   <script src="/js/constants.map.js"></script>
   <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?v=quarterly&key=AIzaSyAt3PW0US-sHcsytFOSh8rKcZsRBGOqXnk&libraries=drawing&callback=initMap"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=quarterly&key={{GOOGLE_MAPS_API_KEY}}&libraries=drawing&callback=initMap"></script>
 
 </body>
 
