feat: trying heroku app input ios

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,13 @@
 /*--variables --*/
+
+input, input:before, input:after {
+  -webkit-user-select: initial !important;
+  -khtml-user-select: initial !important;
+  -moz-user-select: initial !important;
+  -ms-user-select: initial !important;
+  user-select: initial !important;
+ } 
+
 :root {
   --category-bg-color: #00c98d;
 }
