feat: heroku input ios solved, trying same with textarea

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 /*--variables --*/
 
-input, input:before, input:after {
+input, input:before, input:after, textarea {
   -webkit-user-select: initial !important;
   -khtml-user-select: initial !important;
   -moz-user-select: initial !important;
